--- a/pages/ramac-2023.html
+++ b/pages/ramac-2023.html
@@ -13,45 +13,59 @@
 <div class="card mb-5 border-0">
   <h3 class="card-header bg-transparent text-primary">RAMAC2023 EN BREF...</h3>
   <div class="card-body text-justify">
-    <p class="card-text">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun, la première édition des <strong>RAMAC (Rencontres Africaine des Marchés Carbone)</strong>, se tiendra dans le Bassin du Congo, deuxième puits de carbone mondial après l’Amazonie; plus précisément à Douala, capitale économique du Cameroun. Cette édition qui est consacrée aux processus d'apprentissages, de partages et de collaborations autour des marchés internationaux du carbone et de la finance climatique se déroulera du 04 au 07 Octobre 2023 sous le thème: <strong class="font-italic">Investir dans les marchés carbone pour une contribution au développement local et la conservation des écosystèmes en Afrique.</strong> Elle réunira près de 40 artistes et musiciens, 100 conférenciers, 500 participants, et environ 10 000 visiteurs issu de 47 Pays d'Afrique et du monde.</p>
+    <p class="card-text">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun, la première édition des <strong>RAMAC (Rencontres Africaine des Marchés Carbone)</strong>, se tiendra dans le Bassin du Congo, deuxième puits de carbone mondial après l’Amazonie; plus précisément à Douala, capitale économique du Cameroun. Cette édition qui est consacrée aux processus d'apprentissages, de partages et de collaborations autour des marchés internationaux du carbone et de la finance climatique se déroulera du 04 au 07 Octobre 2023 sous le thème: <em class="font-weight-bold">Investir dans les marchés carbone pour une contribution au développement local et la conservation des écosystèmes en Afrique.</em> Elle réunira près de 40 artistes et musiciens, 100 conférenciers, 500 participants, et environ 10 000 visiteurs issu de 47 Pays d'Afrique et du monde.</p>
     <p class="card-text">Ces rencontres qui s’inscrivent dans un contexte de relance des activités climatiques et environnementales post-COVID visent à amplifier la dynamique des marchés internationaux du carbone en Afrique, tout en incitant les États africain à s’engager d’avantage au sein des nouveaux marchés tel que le régime de compensation des émissions de CO2 de l’aviation civile internationale (CORSIA);  non seulement pour compenser les émissions des Pays développés, mais également contribué au développement local et la conservation des écosystèmes des États africains à travers des solutions durables et sobres en carbone.</p>
     <p class="card-text">Depuis l’avènement des marchés carbone, l’Afrique n’a pas véritablement tiré profit : on note seulement 2.8 % environ de projets développés en Afrique sous le Mécanisme de Développement Propre (MDP), avec un transfert de connaissance très limité. Pourtant l’Afrique est responsable de moins de 4 % des émissions de gaz à effet de serre dans le monde, et le continent subit de plein fouet les effets néfastes des changements climatiques par rapport aux autres continents, particulièrement les femmes et les jeunes.</p>
+    <p class="card-text">Notre ambition est de faire de l’Afrique en général et du Bassin du Congo en particulier, la nouvelle destination mondiale des investissements climatiques, en vue de passer de 2.8% de projets sous le MDP, à au moins 30% sous le Mécanisme de Développement Durable (MDD).</p>
     <p class="card-text">Il s’agit dont pour les organisateurs de créer un cadre de dialogue multi-acteurs qui réunira autour d’une même table les États Africains et les Partenaires au développement, afin de réorienter main dans la main, les cadres de collaborations. Se tenant à la veille de la COP 28, ces rencontres permettront également de recueillir les notes de position des acteurs locaux en vue de leur prise en compte à la COP.</p>
+    <a class="btn btn-success text-uppercase" style="background-color: #6ebe00; border-color: #6ebe00;" href="/rapport/RAMAC-2023_RESUME_FR.pdf">Téléchargez</a>
   </div>
 </div>
 
 <div class="card mb-5 border-0">
-<h3 class="card-header mb-3 bg-transparent text-primary">ATTENDUS</h3>
+  <h3 class="card-header bg-transparent text-primary">RAMAC2023 IN BRIEF...</h3>
+  <div class="card-body text-justify">
+    <p class="card-text">Under the high patronage of the Prime Minister Head of Government of Cameroon, the first edition of <strong>RAMAC: African Meetings of Carbon Market</strong>, will be held in the Congo Basin, the second largest carbon sink in the world after the Amazon; more precisely in Douala, the economic capital of Cameroon. This edition, which is dedicated to learning, sharing and collaboration processes around international carbon markets and climate finance, will take place from October 4 to 7, 2023 under the theme: <em class="font-weight-bold">“Investing in carbon markets for a contribution to development and the conservation of ecosystems in Africa”</em>. It will bring together nearly 100 speakers, 500 participants, 40 artists and musicians, and around 10,000 visitors from African countries and the world.</p>
+    <p class="card-text">These meetings, which are part of a context of relaunch of post-COVID climate and environmental activities, aim to amplify the dynamics of international carbon markets in Africa, while encouraging African States to engage more in new markets, such as the Carbon Offsetting and Reduction Scheme for International Aviation (CORSIA); not only to offset the emissions of developed countries, but also contributed to local development and the conservation of ecosystems in African states through sustainable and low-carbon solutions.</p>
+    <p class="card-text">Since the advent of carbon markets, Africa has not really benefited: there are only about 2.8% of projects developed in Africa under the Clean Development Mechanism (CDM), with a very limited transfer of knowledge. Yet Africa is responsible for less than 4% of greenhouse gas emissions in the world, and the continent bears the brunt of the adverse effects of climate change compared to other continents, particularly women and young people.</p>
+    <p class="card-text">Our ambition is to make Africa in general and the Congo Basin in particular, the new global destination for climate investments, with a view to moving from 2.8% of projects under the CDM to at least 30% under the Sustainable Development Mechanism (SDD).</p>
+    <p class="card-text">It is therefore a question for the organizers to created a framework for multi-actor dialogue which will bring together around the same table the African States and Development Partners, in order to reorient, hand in hand, the frameworks for collaboration. Taking place on the eve of COP 28, these meetings will also allow the collection of position papers from local actors with a view to their consideration at the COP.</p>
+    <a class="btn btn-success text-uppercase" style="background-color: #6ebe00; border-color: #6ebe00;" href="/rapport/RAMAC-2023_RESUME_EN.pdf">Download</a>
+  </div>
+</div>
+
+<div class="card mb-5 border-0">
+<h3 class="card-header mb-3 bg-transparent text-primary">ATTENDUS / ATTENDERS</h3>
 <div class="card-deck mb-3 text-center pl-3 pr-3">
   <div class="card bg-primary">
     <div class="card-body">
   	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->100</h4>
-      <p class="card-text text-white">Conférenciers</p>
+      <p class="card-text text-white">Conférenciers<br>/<br>Speakers</p>
     </div>
   </div>
   <div class="card bg-primary">
     <div class="card-body">
   	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->500</h4>
-      <p class="card-text text-white">Participants</p>
+      <p class="card-text text-white">Participants<br>/<br>Participants</p>
     </div>
   </div>
   <div class="card bg-primary">
     <div class="card-body">
   	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->40</h4>
-      <p class="card-text text-white">Artistes</p>
+      <p class="card-text text-white">Artistes<br>/<br>Artists</p>
     </div>
   </div>
   <div class="card bg-primary">
     <div class="card-body">
   	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->+10 000</h4>
-      <p class="card-text text-white">Visiteurs</p>
+      <p class="card-text text-white">Visiteurs<br>/<br>Visitors</p>
     </div>
   </div>
 </div>
 </div>
 
 <div class="card mb-5 border-0">
-<h3 class="card-header mb-3 text-primary bg-transparent">AU PROGRAMME</h3>
+<h3 class="card-header mb-3 text-primary bg-transparent">AU PROGRAMME / PROGRAM</h3>
 <div id="slider" class="container-fluid mb-3">
 	<div class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
@@ -66,37 +80,37 @@
 	 		<div class="carousel-item active">
 	 		<img src="/images/recontreb2b.jpg" style="width: 100%; height: 440px; object-fit: cover;" class="d-block" alt="Networking et rencontres B2B">
 	 		<div class="carousel-caption d-none d-md-block">
-	 			<h3 class="font-weight-bolder">Networking et rencontres B2B</h3>
+	 			<h3 class="font-weight-bolder">Networking et rencontres B2B<br>/<br>Networking and B2B meeting<br></h3>
 	 		</div>
 	 		</div>
 	 		<div class="carousel-item">
 	 		<img src="/images/master-class.jpg" style="width: 100%; height: 440px; object-fit: cover;" class="d-block" alt="Atelier de formations gratuites et master class">
 	 		<div class="carousel-caption d-none d-md-block">
-	 			<h3 class="font-weight-bolder">Ateliers de formations gratuites et master class</h3>
+	 			<h3 class="font-weight-bolder">Ateliers de formations gratuites et master class<br>/<br>Free training and master classes</h3>
 	 		</div>
 	 		</div>
 	 		<div class="carousel-item">
 	 		<img src="/images/foire-et-exposition.jpg" style="width: 100%; height: 440px; object-fit: cover;" class="d-block" alt="Foire exposition et marchés des projets climatiques">
 	 		<div class="carousel-caption d-none d-md-block">
-	 			<h3 class="font-weight-bolder">Foire exposition et marchés des projets climatiques</h3>
+	 			<h3 class="font-weight-bolder">Foire exposition et marchés des projets climatiques<br>/<br>Trade fair and climate projects markets</h3>
 	 		</div>
 	 		</div>
 	 		<div class="carousel-item">
 	 		<img src="/images/divertissement.jpg" style="width: 100%; height: 440px; object-fit: cover;" class="d-block" alt="Spectacle et divertissement">
 	 		<div class="carousel-caption d-none d-md-block">
-	 			<h3 class="font-weight-bolder">Spectacles et divertissements</h3>
+	 			<h3 class="font-weight-bolder">Spectacles et divertissements<br>/<br>Show and entertainment</h3>
 	 		</div>
 	 		</div>
 	 		<div class="carousel-item">
 	 		<img src="/images/ecotourisme.jpg" style="width: 100%; height: 440px; object-fit: cover;" class="d-block" alt="Écotourisme">
 	 		<div class="carousel-caption d-none d-md-block">
-	 			<h3 class="font-weight-bolder">Écotourisme</h3>
+	 			<h3 class="font-weight-bolder">Écotourisme<br>/<br>Ecotourism</h3>
 	 		</div>
 	 		</div>
 	 		<div class="carousel-item">
 	 		<img src="/images/concert-climat.jpg" style="width: 100%; height: 440px; object-fit: cover;" class="d-block" alt="Concert climat">
 	 		<div class="carousel-caption d-none d-md-block">
-	 			<h3 class="font-weight-bolder">Concert climat</h3>
+	 			<h3 class="font-weight-bolder">Concert climat<br>/<br>Climate concert</h3>
 	 		</div>
 	 		</div>
 	 	</div>
@@ -105,16 +119,16 @@
 </div>
 
 <div class="card mb-5 border-0">
-  <h3 class="card-header bg-transparent text-primary">CONTACT</h3>
+  <h3 class="card-header bg-transparent text-primary">CONTACT / CONTACT</h3>
   <div class="card-body">
-    <h4 class="card-title">SECRÉTARIAT PERMANENT</h4>
-    <p class="card-text"><strong>Téléphone</strong>: +237 696197375</p>
+    <h4 class="card-title">SECRÉTARIAT PERMANENT / PERMANENT SECRETARY</h4>
+    <p class="card-text"><strong>Téléphone / Phone</strong>: +237 696197375</p>
     <p class="card-text"><strong>Email</strong>: social_acdespe@yahoo.fr</p>
   </div>
 </div>
 
 <div class="card mb-5 border-0">
-<h3 class="card-header mb-3 bg-transparent text-primary">PARTENAIRES</h3>
+<h3 class="card-header mb-3 bg-transparent text-primary">PARTENAIRES / PARTNERS</h3>
 <div class="card-deck mb-3 text-center">
   <div class="card border-0">
     <div class="card-body">
