--- a/pages/ramac-2023.html
+++ b/pages/ramac-2023.html
@@ -150,9 +150,9 @@
   
   <div class="card border-0">
     <div class="card-body">
-  	<img src="/images/south-korea.jpg" class="card-img-top img-thumbnail" alt="South Korea">
+  	<img src="/images/dubai.jpg" class="card-img-top img-thumbnail" alt="South Korea">
 	 <div class="d-none d-md-block">
-	 <p class="font-weight-bolder">Corée du Sud</p>
+	 <p class="font-weight-bolder">Dubaï</p>
 	 </div>
     </div>
   </div>
